--- a/src/Password/_index.scss
+++ b/src/Password/_index.scss
@@ -14,6 +14,11 @@
     padding-top: $marage10;
     @include scrollbar;
   }
+  .repassW{
+    display: flex;
+    align-items: center;
+  margin-top: $marage10;
+  }
   .btn {
     display: flex;
     justify-content: center;
