--- a/src/styles/caseManagement/_paginationBar.scss
+++ b/src/styles/caseManagement/_paginationBar.scss
@@ -1,23 +1,25 @@
 @import '../variable';
 .pagination {
-    display: inline-block;
-  }
-  .pagination-btn{
-    padding: 8px 16px;
-  }
-  
-  .pagination .pagination-btn {
-    color: $focusClrG;
-    float: left;
-    text-decoration: none;
-    transition: background-color .3s;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  
-  .pagination .pagination-btn.pagination-active {
-    background-color: $focusClrG;
-    color: white;
-  }
-  
-  .pagination .pagination-btn:hover:not(.active) {background-color: #ddd;}
+  display: flex;
+}
+.pagination-btn {
+  padding: 8px 16px;
+}
+
+.pagination .pagination-btn {
+  color: $focusClrG;
+  float: left;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.pagination .pagination-btn.pagination-active {
+  background-color: $focusClrG;
+  color: white;
+}
+
+.pagination .pagination-btn:hover:not(.active) {
+  background-color: #ddd;
+}
