--- a/src/Header/_index.scss
+++ b/src/Header/_index.scss
@@ -96,11 +96,20 @@
       align-items: center;
     }
     .count {
+      transition: height 0.3s ease, opacity 0.6s ease;
       div {
         margin: 0px 10px;
         padding: 5px 0 5px 20px;
         border-top: 1px solid #aaa;
       }
+    }
+    .countUp {
+      opacity: 0;
+      height: 0;
+    }
+    .countDown {
+      opacity: 1;
+      height: 210px;
     }
   }
   .navFlex {
