--- a/src/HeaderLeft/_index.scss
+++ b/src/HeaderLeft/_index.scss
@@ -4,11 +4,15 @@
   width: 100%;
   height: calc(100vh - 70px);
   // background-color: red;
-  background-image: url('../assets/service-1019821_1920.jpg');
+  background-image: url('../assets/2895569.jpg');
+  // background-image: url('../assets/4207.jpg');
+  // background-image: url('../assets/6386.jpg');
+  // background-image: url('../assets/OLPU660.jpg');
+  // background-image: url('../assets/85344.jpg');
   background-position: center;
-  background-size: 90% auto;
+  background-size: 60% auto;
   align-items: center;
-  justify-content: space-between;
+  // justify-content: space-between;
   background-repeat: no-repeat;
   // filter: blur(2px);
   // opacity: ;
