--- a/src/HeaderLeft/_index.scss
+++ b/src/HeaderLeft/_index.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: calc(100vh - 70px);
   // background-color: red;
-  background-image: url('../assets/2895569.jpg');
+  background-image: url('../assets/2895569-1.jpg');
   // background-image: url('../assets/4207.jpg');
   // background-image: url('../assets/6386.jpg');
   // background-image: url('../assets/OLPU660.jpg');
