--- a/src/HeaderLeft/_index.scss
+++ b/src/HeaderLeft/_index.scss
@@ -11,6 +11,7 @@
   // background-image: url('../assets/85344.jpg');
   background-position: center;
   background-size: 60% auto;
+  overflow: hidden;
   align-items: center;
   // justify-content: space-between;
   background-repeat: no-repeat;
